--- a/app/views/promocodes_days/_lt_cnt.html.erb
+++ b/app/views/promocodes_days/_lt_cnt.html.erb
@@ -19,7 +19,7 @@
         <li>Enter your promotional code into the box of "Gift cards & promotional codes"</li>
         <!-- <li>Proceed with payment then the code is automatically applied.</li> -->
         <li class="about_db_dis">
-          <p>What is "Double Discount"</p>
+          <p>What is "Double Discount"?</p>
           <span class="dou_red">Double Discount</span>
           <em>You can get extra discount by applying promotional code to the product that is being discounting.</em>
           <span class="dou_green">Double Discount</span>
