--- a/app/views/deals/promo_codes.html.erb
+++ b/app/views/deals/promo_codes.html.erb
@@ -30,7 +30,7 @@
                 <li>Enter your promotional code into the box of "Gift cards & promotional codes"</li>
                 <!-- <li>Proceed with payment then the code is automatically applied.</li> -->
                 <li class="about_db_dis">
-                  <p>What is "Double Discount"</p>
+                  <p>What is "Double Discount"?</p>
                   <span class="dou_red">Double Discount</span>
                   <em>You can get extra discount by applying promotional code to the product that is being discounting.</em>
                   <span class="dou_green">Double Discount</span>
@@ -66,7 +66,7 @@
       </div><!--./lt_cnt-->
       
       <div class="rt_cnt">
-        <h2>Promotion Codes on Amazon May. 29. 2019.</h2>
+        <h2>Promotion Codes on Amazon May. 30. 2019.</h2>
         
         <div class="sort_box clearfix">
           <ul>
