--- a/app/views/deals/_body_promocode.html.erb
+++ b/app/views/deals/_body_promocode.html.erb
@@ -35,6 +35,220 @@
  </div>
 -->
 
+<div class="card clearfix" data-score="15" data-price="51.84">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Qz1f9e"><img src="https://m.media-amazon.com/images/I/81G7uDG+0XL._SR400,400_.jpg" alt="Clorts Women's Hiking Boots" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>15% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Qz1f9e">Clorts Women's Hiking Boots Waterproof Suede Leather Lightweight Hiking Shoes Outdoor Backpacking Trekking Trail</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$51.84</span><span class="ori_price">$60.99</span></address>
+      <p><span>Take <strong>15% off at $60.99</strong> with promo code: <strong>15Z7IBZ1</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 02, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2Qz1f9e">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="15" data-price="53.54">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2QwDyhM"><img src="https://m.media-amazon.com/images/I/71lD9-CEmmL._SR400,400_.jpg" alt="Clorts Men's Pioneer Hiking Boots" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>15% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2QwDyhM">Clorts Men's Pioneer Hiking Boots Waterproof Suede Leather Lightweight Hiking Shoes Dark Grey/Dark Red 9 M US</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$53.54</span><span class="ori_price">$62.99</span></address>
+      <p><span>Take <strong>15% off at $62.99</strong> with promo code: <strong>15CDLOWK</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 01, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2QwDyhM">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="52" data-price="12.48">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2I79OEx"><img src="https://m.media-amazon.com/images/I/71iwJcN88wL._SR400,400_.jpg" alt="VEPOSE Men's Fashion Sneaker Canvas" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>52% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2I79OEx">VEPOSE Men's Fashion Sneaker Canvas Casual Shoes Low Top Skate Shoe</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$12.48</span><span class="ori_price">$25.99</span></address>
+      <p><span>Take <strong>52% off at $25.99</strong> with promo code: <strong>52C9ZKOY</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 02, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2I79OEx">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="13.49">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2WvYT0u"><img src="https://m.media-amazon.com/images/I/61qe-018A+L._SR400,400_.jpg" alt="FEIFAN Men Women Running Shoes" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2WvYT0u">FEIFAN Men Women Running Shoes Breathable Flynit Lace UP Fashion Sneakers</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$13.49</span><span class="ori_price">$26.99</span></address>
+      <p><span>Take <strong>50% off at $26.99</strong> with promo code: <strong>50HK85OR</strong></span></p>
+      <span class="ex_date">Expiration Date : May 31, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2WvYT0u">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="20" data-price="19.19">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Wzkhlk"><img src="https://m.media-amazon.com/images/I/71UB0kl-UPL._SR400,400_.jpg" alt="Women Tote Bags Retro Shoulder Bag" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>20% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Wzkhlk">Women Tote Bags Retro Shoulder Bag Purse Satchel Hobo Purse Zippred Waterproof Travel Handbags with Tassel</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$19.19</span><span class="ori_price">$23.99</span></address>
+      <p><span>Take <strong>20% off at $23.99</strong> with promo code: <strong>20FQPQPF</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 09, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2Wzkhlk">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="20" data-price="42.23">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2WAhGHP"><img src="https://m.media-amazon.com/images/I/717HLzV6BRL._SR400,400_.jpg" alt="Electric Kettle" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>20% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2WAhGHP">Electric Kettle Temperature Control, Double Wall 100% Stainless Steel Kettle with True Precise Temp Control and LCD Display...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$42.23</span><span class="ori_price">$52.79</span>
+        <div class="tooltip_green">
+          <span>Double Discount</span>
+          <div class="tooltip-content">
+            <p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p>
+          </div>
+         </div>
+      </address>
+      <p><span>Take <strong>20% off at $52.79</strong> with promo code: <strong>20PLUS10</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 03, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2WAhGHP">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="20" data-price="8.79">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2ELjeEG"><img src="https://m.media-amazon.com/images/I/71ZL0igKTqL._SR400,400_.jpg" alt="Olive Oil Sprayer" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>20% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2ELjeEG">Olive Oil Sprayer, iTrunk Oil Dispenser Stainless Steel Refillable Oil Sprayer Food-grade Glass Vinegar Bottle</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$8.79</span><span class="ori_price">$10.99</span></address>
+      <p><span>Take <strong>20% off at $10.99</strong> with promo code: <strong>20YDNPR2</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 02, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2ELjeEG">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="20" data-price="63.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2EMC1zI"><img src="https://m.media-amazon.com/images/I/91nG2ifKQDL._SR400,400_.jpg" alt="Secura Electric Hot Air Fryer" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>20% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2EMC1zI">Secura Electric Hot Air Fryer Extra Large Capacity Air Fryer and additional accessories</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$63.99</span><span class="ori_price">$79.99</span>
+        <div class="tooltip_red">
+          <span>Double Discount</span>
+          <div class="tooltip-content">
+            <p>You can get extra discount by applying promotional code to the product that is being discounting.</p>
+          </div>
+         </div>
+      </address>
+      <p><span>Take <strong>20% off at $79.99</strong> with promo code: <strong>20EBF3QS</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 27, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2EMC1zI">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="30" data-price="31.49">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2EMC7HA"><img src="https://m.media-amazon.com/images/I/71HYB1sEOXL._SR400,400_.jpg" alt="Knife Set,6-Piece Kitchen Knife Set" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>30% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2EMC7HA">Knife Set,6-Piece Kitchen Knife Set with Wooden Block Germany High Carbon Stainless Steel Knife Block Set</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$31.49</span><span class="ori_price">$44.98</span></address>
+      <p><span>Take <strong>30% off at $44.98</strong> with promo code: <strong>30ZAFCT4</strong></span></p>
+      <span class="ex_date">Expiration Date : May 30, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2EMC7HA">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="30" data-price="24.49">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2W7nc0w"><img src="https://m.media-amazon.com/images/I/71OFl1Kj47L._SR400,400_.jpg" alt="Immersion Blender" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>30% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2W7nc0w">Immersion Blender, Kealive Minipimer 500 Watt 12-Speed, Hand Immersion Blender 4-in-1 Food Chopper, Egg Beater and Beaker</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$24.49</span><span class="ori_price">$34.99</span></address>
+      <p><span>Take <strong>30% off at $34.99</strong> with promo code: <strong>301XKUYU</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 03, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2W7nc0w">Use Code</a>
+  </div>
+</div>
+
 <div class="card clearfix" data-score="45" data-price="3.84">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/2QxldB9"><img src="https://m.media-amazon.com/images/I/61prOqgNuXL._SR400,400_.jpg" alt="AirPods Case Cover" /></a>
