--- a/app/views/deals/bestdeals.html.erb
+++ b/app/views/deals/bestdeals.html.erb
@@ -69,7 +69,8 @@
         <div class="card_wrap sort-list">
           <%= render 'deals/body_bestdeals' %>
         </div>
-        <p class="updating">We are still updating the best deals... :D</h2>
+        <p class="updating">We are still updating the best deals... :D <a href="/deals_days/day_01">GO TO THE BEST DEALS OF YESTERDAY</a></h2>
+        
         
       </div><!--./rt_cnt-->    
 
