--- a/app/views/promocodes_days/day_02.html.erb
+++ b/app/views/promocodes_days/day_02.html.erb
@@ -26,6 +26,7 @@
           <div class="card_wrap sort-list">
             <%= render 'promocodes_days/day_02' %>
           </div>
+          <p class="updating"><a href="/deals/promo_codes">GO TO TODAY'S PROMO CODES</a></h2>
           
         </div><!--./rt_cnt-->    
 
