--- a/app/assets/stylesheets/deals.css.erb
+++ b/app/assets/stylesheets/deals.css.erb
@@ -38,6 +38,7 @@
   .codes .rt_cnt .sort_box ul li a{font-size:20px;font-family: 'Anton', sans-serif;line-height:1.1;text-decoration:none;color:#000;display:block;text-align:center;padding:5px;}
   .codes .rt_cnt .sort_box ul li a:hover{background:#000;color:#fff;}
   .codes .rt_cnt .updating{font-size:30px;font-size:20px;font-family: 'Anton', sans-serif;margin-bottom:100px;}
+  .codes .rt_cnt .updating a{text-decoration:none;margin-left:10px;color:#fff;background:#000;padding:5px 10px;}
 
   .codes .card_wrap{margin:20px 0 0 0;}
   .codes .card_wrap .card{border-bottom:1px solid #ccc;margin:0 0 15px 0;padding-bottom:10px;}
@@ -152,6 +153,7 @@
   .codes .card_wrap .card .deal_btn{float:none;width:100%;padding:7px;margin-top:10px;}
   .codes .card_wrap .card .deal_btn a{text-decoration:none;color:#616161;margin:20px 0 0 0;border:1px solid;padding:7px 20px;}
   .codes .rt_cnt .updating{font-size:30px;font-size:20px;font-family: 'Anton', sans-serif;margin-bottom:100px;}
+  .codes .rt_cnt .updating a{display:block;text-decoration:none;color:#fff;background:#000;padding:5px 10px;}
 }
 
 @media screen and (max-width:400px){
