--- a/app/views/deals/_body_bestdeals.html.erb
+++ b/app/views/deals/_body_bestdeals.html.erb
@@ -20,12 +20,12 @@
 <!-- 
 <div class="card clearfix" data-score="percentage" data-price="discounted_price">
   <div class="image_box">
-    <a target="_blank" href="product_link"><img src="product_img" alt="" /></a>
+    <a target="_blank" href="product_link"><img src="product_img" alt="Amazon Deal Of The Day" /></a>
   </div>
   <div class="inner">
     <span class="regular"><em>percentage% OFF</em> + free shipping</span>
     <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
-    <p><a target="_blank" href="product_link">Deal_Of_The_Day_Title</a></p>
+    <p><a target="_blank" href="product_link">Amazon Deal Of The Day: Deal_Of_The_Day_Title</a></p>
 
     <div class="code_high">
       <ul>
@@ -72,6 +72,321 @@
   </div>
 </div> 
 -->
+
+<div class="card clearfix" data-score="39" data-price="109.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2EJVMYF"><img src="https://m.media-amazon.com/images/I/91K9SyGiyzL._AC_UL436_.jpg" alt="Acer Monitor" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>39% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2EJVMYF">Acer R240HY bidx 23.8-Inch IPS HDMI DVI VGA (1920 x 1080) Widescreen Monitor</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$109.99</span><span class="ori_price">$179.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2EJVMYF">Shop Now</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="45" data-price="719.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2QCSYRU"><img src="https://m.media-amazon.com/images/I/91udcEprl8L._AC_UL436_.jpg" alt="" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>45% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2QCSYRU">prodcut_description</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$719.99</span><span class="ori_price">$1,299.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2QCSYRU">Shop Now</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="99.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2IbdDZb"><img src="https://m.media-amazon.com/images/I/614rX+FqKEL._AC_UL436_.jpg" alt="Powerbeats3 Wireless Earphones" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2IbdDZb">Powerbeats3 Wireless Earphones - Neighborhood Collection - Turf Green</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$99.99</span><span class="ori_price">$199.95</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2IbdDZb">Shop Now</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="29" data-price="119.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2MfTHty"><img src="https://m.media-amazon.com/images/I/71wamdtiUHL._AC_UL436_.jpg" alt="Garmin Forerunner" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>29% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2MfTHty">Garmin Forerunner 35; Easy-to-Use GPS Running Watch, Black</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$119.99</span><span class="ori_price">$169.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2MfTHty">Shop Now</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="41" data-price="169.94">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2QBf5rA"><img src="https://m.media-amazon.com/images/I/814fSnCl0eL._AC_UL436_.jpg" alt="Electric Foil Shaver" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>41% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2QBf5rA">Braun Series 7 790cc-4 Electric Foil Shaver with Clean&Charge Station, 1 Count</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$169.94</span><span class="ori_price">$289.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2QBf5rA">Shop Now</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="46" data-price="discounted_price">
+  <div class="image_box">
+    <a target="_blank" href="product_link"><img src="https://i.pinimg.com/originals/b9/14/58/b91458b9599377f69e679603228fffe4.png" alt="Amazon Deal Of The Day" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>Up to 46% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="product_link">Amazon Deal Of The Day: Save up to 46% on Kitchen Favorites</a></p>
+
+    <div class="code_high">
+      <ul>
+        <li>
+          <p>Cuisinart Cast Iron Casserole</p>
+          <ul>
+            <li><a href="https://amzn.to/2MjzO50">Cuisinart Cast Iron Casserole, Blue Gradient, 7-Quart</a> - <span>69.99<em>129.99</em></span></li>
+            <li><a href="https://amzn.to/2I9c0eM">Cuisinart Cast Iron Chicken Fryer, Blue Gradient, 12"</a> - <span>69.99<em>129.99</em></span></li>
+            <li><a href="https://amzn.to/2Qxvk9k">Cuisinart Cast Iron Casserole, Blue Gradient, 5.5-Quart</a> - <span>54.99<em>99.99</em></span></li>
+            <li><a href="https://amzn.to/2EJ4E0m">Cuisinart Cast Iron Casserole, Grey Gradient, 7-Quart</a> - <span>69.99<em>129.99</em></span></li>
+            <li><a href="https://amzn.to/2MgnQsN">Cuisinart Cast Iron Chicken Fryer, Grey Gradient, 12"</a> - <span>69.99<em>129.99</em></span></li>
+            <li><a href="https://amzn.to/2EGE1JO">Cuisinart Cast Iron Casserole, Grey Gradient, 5.5 Quart</a> - <span>54.99<em>99.99</em></span></li>
+          </ul>
+        </li>
+
+        <li>
+          <p>Cookware Set</p>
+          <ul>
+            <li><a href="https://amzn.to/2IdP7XI">Cuisinart Classic Stainless Steel Cookware Set (8-Piece)</a> - <span>63.99<em>159.99</em></span></li>
+          </ul>
+        </li>
+
+        <li>
+          <p>Electric Food Dehydrator</p>
+          <ul>
+            <li><a href="https://amzn.to/2YTgHzS">Excalibur 3900B 9-Tray Electric Food Dehydrator</a> - <span>154.99<em>214.99</em></span></li>
+          </ul>
+        </li>
+        
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="product_link">Shop Now</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="34" data-price="45.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2QEVOWw"><img src="https://images-na.ssl-images-amazon.com/images/I/5132AELj1CL.jpg" alt="Casio Men's G-shock" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>34% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2QEVOWw">Casio Men's G-shock DW5600E-1V Shock Resistant Black Resin Sport Watch</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$45.99</span><span class="ori_price">$69.95</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2QEVOWw">Shop Now</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="percentage" data-price="8.86">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2IcNHN1"><img src="https://m.media-amazon.com/images/I/31fjssdoZLL._AC_UL436_.jpg" alt="Headphone Jack" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>percentage% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2IcNHN1">Apple Lightning to 3.5 mm Headphone Jack Adapter</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$8.86</span><span class="ori_price">$13.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2IcNHN1">Shop Now</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="25" data-price="749.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2I9r103"><img src="https://images-na.ssl-images-amazon.com/images/I/81bWkUdnanL._SX522_.jpg" alt="Gaming Monitor" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>25% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2I9r103">ASUS ROG Swift PG348Q 34" Gaming Monitor Curved Ultra-Wide 3440x1440 100Hz IPS DisplayPort USB Eye Care G-SYNC</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$749.99</span><span class="ori_price">$999.00</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2I9r103">Shop Now</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="23" data-price="999.98">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2MlJ4Wa"><img src="https://m.media-amazon.com/images/I/61rjV21bzfL._AC_UL436_.jpg" alt="Acer Predator Helios 300 Gaming Laptop PC" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>23% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2MlJ4Wa">Acer Predator Helios 300 Gaming Laptop PC, 15.6" FHD IPS w/ 144Hz Refresh, Intel i7-8750H, GTX 1060 6GB, 16GB DDR4, 256GB NVMe SSD</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$999.98</span><span class="ori_price">$1,299.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2MlJ4Wa">Shop Now</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="30" data-price="69.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2YRziMO"><img src="https://images-na.ssl-images-amazon.com/images/I/71bN6MCuICL._SX522_.jpg" alt="Pressure Cooker" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>30% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2YRziMO">Instant Pot DUO60 6 Qt 7-in-1 Multi-Use Programmable Pressure Cooker</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$69.99</span><span class="ori_price">$99.95</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2YRziMO">Shop Now</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="41" data-price="94.00">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2QAJE0K"><img src="https://m.media-amazon.com/images/I/81dbJ1GJ6cL._AC_UL436_.jpg" alt="External Hard Drive" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>41% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2QAJE0K">Western Digital 4TB Black My Passport Portable External Hard Drive - USB 3.0 - WDBYFT0040BBK-WESN</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$94.00</span><span class="ori_price">$159.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2QAJE0K">Shop Now</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="33" data-price="167.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2EMx21Y"><img src="https://m.media-amazon.com/images/I/81khZx00+tL._AC_UL436_.jpg" alt="Samsung T5 Portable SSD" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>33% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2EMx21Y">Samsung T5 Portable SSD - 1TB - USB 3.1 External SSD (MU-PA1T0B/AM)</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$167.99</span><span class="ori_price">$249.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2EMx21Y">Shop Now</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="29" data-price="45.90">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2QCQBOP"><img src="https://m.media-amazon.com/images/I/81L9+4dTIgL._AC_UL436_.jpg" alt="DualShock 4 Wireless Controller" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>29% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2QCQBOP">DualShock 4 Wireless Controller for PlayStation 4 - Magma Red</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$45.90</span><span class="ori_price">$64.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2QCQBOP">Shop Now</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="79.50">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2MgI9pZ"><img src="https://images-na.ssl-images-amazon.com/images/I/51RlEcSVxsL._SX679_.jpg" alt="Apple Smart Keyboard" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2MgI9pZ">Apple Smart Keyboard for 10.5-inch iPad Pro - US English</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$79.50</span><span class="ori_price">$159.00</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2MgI9pZ">Shop Now</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="16" data-price="674.00">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2QwBoyG"><img src="https://images-na.ssl-images-amazon.com/images/I/51A8s21l9uL._SY606_.jpg" alt="Apple iPad Pro" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>16% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2QwBoyG">Apple iPad Pro (11-inch, Wi-Fi, 64GB) - Silver (Latest Model)</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$674.00</span><span class="ori_price">$799.00</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2QwBoyG">Shop Now</a>
+  </div>
+</div>
 
 <div class="card clearfix" data-score="24" data-price="136.05">
   <div class="image_box">
