--- a/app/views/deals_days/day_03.html.erb
+++ b/app/views/deals_days/day_03.html.erb
@@ -26,6 +26,7 @@
           <div class="card_wrap sort-list">
             <%= render 'deals_days/day_03' %>
           </div>
+          <p class="updating"><a href="/deals/bestdeals">GO TO TODAY'S THE BEST DEALS</a></h2>
           
         </div><!--./rt_cnt-->    
 
