--- a/app/views/deals/_body_bestdeals.html.erb
+++ b/app/views/deals/_body_bestdeals.html.erb
@@ -226,12 +226,12 @@
   </div>
 </div>
 
-<div class="card clearfix" data-score="percentage" data-price="8.86">
+<div class="card clearfix" data-score="37" data-price="8.86">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/2IcNHN1"><img src="https://m.media-amazon.com/images/I/31fjssdoZLL._AC_UL436_.jpg" alt="Headphone Jack" /></a>
   </div>
   <div class="inner">
-    <span class="regular"><em>percentage% OFF</em> + free shipping</span>
+    <span class="regular"><em>37% OFF</em> + free shipping</span>
     <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2IcNHN1">Apple Lightning to 3.5 mm Headphone Jack Adapter</a></p>
     <div class="code_high">
