--- a/app/views/deals/_body_bestdeals.html.erb
+++ b/app/views/deals/_body_bestdeals.html.erb
@@ -73,6 +73,186 @@
 </div> 
 -->
 
+<div class="card clearfix" data-score="55" data-price="33.49">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2I9lYge"><img src="https://m.media-amazon.com/images/I/51u5RqhuKfL._AC_UL320_.jpg" alt="Sofa Inflatable Bed" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>55% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2I9lYge">Intex Pull-out Sofa Inflatable Bed, 76" X 87" X 26", Queen</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$33.49</span><span class="ori_price">$74.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2I9lYge">Shop Now</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="43" data-price="119.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2WvtvPF"><img src="https://m.media-amazon.com/images/I/61TTEa57aTL._AC_UL436_.jpg" alt="Moto X" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>43% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2WvtvPF">Moto X (4th Generation) with Alexa Hands-Free – 32 GB - Unlocked – Super Black - Prime Exclusive</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$119.99</span><span class="ori_price">$209.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2WvtvPF">Shop Now</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="74" data-price="33.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2WBUucc"><img src="https://m.media-amazon.com/images/I/61iF94hE2fL._AC_UL436_.jpg" alt="Scotch PRO Thermal Laminator" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>74% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2WBUucc">Scotch PRO Thermal Laminator, Never Jam Technology Automatically Prevents Misfed Items , 2 Roller System (TL906)</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$33.99</span><span class="ori_price">$128.93</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2WBUucc">Shop Now</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="70" data-price="4.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2IezVth"><img src="https://m.media-amazon.com/images/I/61EUa0WpDlL._AC_UL436_.jpg" alt="SanDisk" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>70% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2IezVth">SanDisk 16GB 2.0 Flash Cruzer Glide USB Drive</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$4.99</span><span class="ori_price">$16.60</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2IezVth">Shop Now</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="48" data-price="49.88">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2I8Ns5z"><img src="https://m.media-amazon.com/images/I/91k4kc43oEL._AC_UL436_.jpg" alt="Bluetooth Speaker" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>48% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2I8Ns5z">Altec Lansing IMW577-BLK Lifejacket 2 Bluetooth Speaker, IP67 Waterproof, Shockproof, Snowproof, Everything-Proof Rating...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$49.88</span><span class="ori_price">$95.60</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2I8Ns5z">Shop Now</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="59" data-price="36.49">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Ib12Fs"><img src="https://m.media-amazon.com/images/I/91-LJ+I5vlL._AC_UL436_.jpg" alt="OtterBox" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>59% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Ib12Fs">OtterBox DEFENDER SERIES Case for iPad Air 2 - Retail Packaging - BLACK</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$36.49</span><span class="ori_price">$89.95</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2Ib12Fs">Shop Now</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="64.95">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2I4u75i"><img src="https://m.media-amazon.com/images/I/71VrOmi5rEL._AC_UL436_.jpg" alt="Beats EP On-Ear Headphones" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2I4u75i">Beats EP On-Ear Headphones - White</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$64.95</span><span class="ori_price">$129.95</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2I4u75i">Shop Now</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="14.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2I8EoNV"><img src="https://m.media-amazon.com/images/I/71zLdeLLmCL._AC_UL436_.jpg" alt="PowerA Joy-Con & Pro Controller Charging Dock" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2I8EoNV">PowerA Joy-Con & Pro Controller Charging Dock - Nintendo Switch</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$14.99</span><span class="ori_price">$29.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2I8EoNV">Shop Now</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="52" data-price="429.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2I7DDoq"><img src="https://m.media-amazon.com/images/I/61eNiRqRcXL._AC_UL436_.jpg" alt="Desktop Memory" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>52% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2I7DDoq">CORSAIR DOMINATOR PLATINUM 64GB (4x16GB) DDR4 3200MHz C16 Desktop Memory</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$429.99</span><span class="ori_price">$900.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2I7DDoq">Shop Now</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="54" data-price="124.61">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Iasfbv"><img src="https://m.media-amazon.com/images/I/81UhRA-K2JL._AC_UL436_.jpg" alt="TV Stand" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>54% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Iasfbv">Modway Render Mid-Century Modern Low Profile 48 Inch TV Stand in Walnut</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$124.61</span><span class="ori_price">$272.25</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2Iasfbv">Shop Now</a>
+  </div>
+</div>
+
 
 <div class="card clearfix" data-score="23" data-price="discounted_price">
   <div class="image_box">
